--- a/amazon.html
+++ b/amazon.html
@@ -54,6 +54,8 @@
   <div class="main">
     <div class="js-product-grid products-grid"></div>
     <script src="/data/products.js"></script>
+    <script src="/scripts/amazon.js"></script>
+
 </body>
 
 </html>
