--- a/amazon.html
+++ b/amazon.html
@@ -45,7 +45,7 @@
 
       <a class="cart-link header-link" href="checkout.html">
         <img class="cart-icon" src="images/icons/cart-icon.png">
-        <div class="cart-quantity">3</div>
+        <div class="cart-quantity js-cart-quantity">0</div>
         <div class="cart-text">Cart</div>
       </a>
     </div>
@@ -53,6 +53,8 @@
 
   <div class="main">
     <div class="js-product-grid products-grid"></div>
+
+    <script src="/data/cart.js"></script>
     <script src="/data/products.js"></script>
     <script src="/scripts/amazon.js"></script>
 
