--- a/amazon.html
+++ b/amazon.html
@@ -54,9 +54,7 @@
   <div class="main">
     <div class="js-product-grid products-grid"></div>
 
-    <script src="/data/cart.js"></script>
-    <script src="/data/products.js"></script>
-    <script src="/scripts/amazon.js"></script>
+    <script type="module" src="/scripts/amazon.js"></script>
 
 </body>
 
