fixed src of source files in html

--- a/amazon.html
+++ b/amazon.html
@@ -54,7 +54,7 @@
   <div class="main">
     <div class="js-product-grid products-grid"></div>
 
-    <script type="module" src="/scripts/amazon.js"></script>
+    <script type="module" src="/javascript-amazon-project/scripts/amazon.js"></script>
 
 </body>
 
