--- a/checkout.html
+++ b/checkout.html
@@ -82,6 +82,6 @@
       </div>
     </div>
 
-    <script type="module" src="/scripts/checkout.js"></script>
+    <script type="module" src="/javascript-amazon-project/scripts/checkout.js"></script>
   </body>
 </html>
